@@ -1,3 +1,9 @@
+2010-01-03  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime-indentation-fu.el, swank-indentation-fu.lisp: Delete
+	contrib. Never worked quite right, and the necessary
+	infrastructure has since been gone.
+
 2010-01-03  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-asdf.lisp (asdf-system-loaded-p): Don't return a
